hw1 code review